--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,13 @@
   font-family: sans-serif;
   text-align: center;
 }
+body {
+  /* font-family: "Montserrat", sans-serif; */
+  background-color: #eaeaea;
+}
+* {
+  font-family: "Montserrat", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
