Сделала нижнюю часть карточки

--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -1,12 +1,12 @@
 header {
-    background: #eaeaea;
+    background: #ffc0c0;
     margin: 0 165px;
     padding: 20px 0px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     font-weight: 700;
-    font-size: 18px;
+    font-size: 25px;
   
     .logo {
       cursor: pointer;
