--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -1,7 +1,7 @@
 header {
     background: #eaeaea;
     margin: 0 165px;
-    padding: 20px 0px;
+    padding: 15px 0px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -14,7 +14,7 @@ header {
 
     .navbar {
       display: flex;
-      // align-items: center;
+      align-items: center;
       justify-content: space-between;
       align-items: flex-start;
     }
