--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -10,6 +10,11 @@ header {
   
     .logo {
       cursor: pointer;
+      transition: transform 0.2s ease;
+
+      &:hover {
+        transform: scale(1.1);
+      }
     }
 
     .navbar {
@@ -23,17 +28,31 @@ header {
     .navbar_basket {
       position: relative;
       padding: 15px;
+      
     }
   
     .favorite-icon{
       width: 22px;
       height: 20px;
       cursor: pointer;
+      cursor: pointer;
+      transition: transform 0.2s ease;
+
+      &:hover {
+        transform: scale(1.1);
+      }
+      
     }
     .basket-icon{
       width: 23.2px;
       height: 23.2px;
       cursor: pointer;
+      cursor: pointer;
+      transition: transform 0.2s ease;
+
+      &:hover {
+        transform: scale(1.1);
+      }
     }
       
     
